--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -18,6 +18,6 @@
       <!-- Aquí se agregarán los resultados -->
     </ul>
 
-    {% include "js/main.js.html" %}
+    {% include "js/search.result.js.html" %}
   </body>
 </html>
