--- a/app/static/sass/_search.results.scss
+++ b/app/static/sass/_search.results.scss
@@ -1,20 +1,45 @@
 .palabra {
-  color: purple;
+  color: #1640ff;
+}
+h1 {
+  font-size: 25px;
+  text-align: center;
+  padding: 20px 0;
 }
 .search-results {
+  margin: 0;
+  display: grid;
+  justify-items: center;
   .no-results {
     font-weight: bold;
     color: red;
   }
   .resultpage {
+    margin-bottom: 20px;
+    border-left: 18px solid #b148c3;
+    padding: 20px 40px;
+    width: 1100px;
+    list-style: none;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
+
     .info {
+      text-align: center;
       margin-bottom: 10px;
       .match {
-        margin-bottom: 5px;
+        font-family: $font-Montserrat-bold;
+        color: #800080;
+        text-align: left;
+        font-size: 16px;
+        margin-bottom: 18px;
         font-weight: bold;
       }
       .result {
-        margin-bottom: 10px;
+        font-family: $font-Montserrat-regular;
+        padding-left: 30px;
+        text-align: left;
+        margin-bottom: 20px;
 
         .highlight {
           background-color: yellow;
@@ -22,7 +47,10 @@
         }
       }
       .pagekey {
+        font-family: $font-Montserrat-bold;
+        text-decoration: none;
         font-size: 16px;
+        color: #af32db;
       }
     }
   }
